--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API REST handbook example using Node, Express, Supertest, React and Swagger.",
   "main": "app.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
