--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "jest",
+    "dev": "nodemon app.js",
     "start": "node app.js"
   },
   "repository": {
@@ -39,6 +40,7 @@
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
     "jest-babel": "^1.0.1",
+    "nodemon": "^3.1.9",
     "supertest": "^6.3.3"
   },
   "packageManager": "yarn@4.5.3+sha512.3003a14012e2987072d244c720506549c1aab73ee728208f1b2580a9fd67b92d61ba6b08fe93f6dce68fd771e3af1e59a0afa28dd242dd0940d73b95fedd4e90"
