--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "API REST handbook example using Node, Express, Supertest, React and Swagger.",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "jest",
     "dev": "nodemon app.js",
